--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body{
 }
 
 .bg .section{
-    --g-h: vat(--c-h);
+    --g-h: var(--c-h);
     --g-s: var(--c-s);
     --g-l: var(--c-l);
     flex-grow: 1;
@@ -184,4 +184,36 @@ body{
     transform: scale3d(1.1, 1.25, 1);
     transform-origin: bottom;
     transition: transform 1s var(--ease-out) 0.5s;
+}
+
+.bg .section:after{
+    content: "";
+    position: absolute;
+    inset: 0;
+    border: var(--border-width) solid rgba(255, 255, 255, 0.8);
+    border-radius: inherit;
+    filter: blur(0.05em);
+    -webkit-mask-image: radial-gradient(100% 100% at 50% 70%, black 30%, transparent 50%);
+    mask-image: radial-gradient(100% 100% at 50% 70%, black 30%, transparent 50%);
+}
+
+.bg .section .glow{
+    position: absolute;
+    inset: 0;
+    border-radius: inherit;
+    mix-blend-mode: overlay;
+    z-index: 1;
+    background: radial-gradient(80% 150% at 50% 100%, hsl(var(--g-h), 100%, var(--g-l)), transparent 70%);
+}
+
+.bg .section:last-of-type{
+    --g-h: calc(var(--c-h) - var(--g-hue-adjust, 0));
+    --g-s: calc(var(--c-s) - 25%);
+    --g-l: calc(var(--c-l) + 20%);
+    transform: scale3d(1, -1, 1) translateZ(1px);
+}
+
+.bg.section:last-of-type::before{
+    background: radial-gradient(85% 125% at 50% 140%, black 66.6%, transparent), radial-gradient(120% 120% at 50% 145%, hsl(calc(var(--g-h) - var(--g-hue-adjust-2, var(--g-hue-adjust, 0))), 100%, 50%) 50%, transparent), radial-gradient(150% 100% at 50% 95%, transparent 15%, hsl(calc(var(--g-h) + 5), 100%, var(--g-lightness, 100%)));
+    background-color: hsl(var(--g-h), var(--g-s), var(--g-l));  
 }
